# badkeys-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
scripts/: generate_blocklist.py  verify_blocklist.py
src/: category.rs  db.rs  error.rs  extract.rs  lib.rs
tests/: integration_test.rs
