[package]
name = "badkeys-rs"
version = "0.1.0"
edition = "2021"
description = "Check P256 public keys against a database of known-bad keys from the badkeys project"
license = "MIT OR Apache-2.0"

[dependencies]
p256 = "0.13"
sha2 = "0.10"
x509-cert = { version = "0.2", features = ["pem"] }
spki = { version = "0.7", features = ["pem"] }
sec1 = { version = "0.7", features = ["pem"] }
der = "0.7"
thiserror = "2"

[dev-dependencies]
hex-literal = "0.4"
